src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Adj_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Catastrophe</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Fax__c</fullName>
        <label>Alternate Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Instructions__c</fullName>
        <label>Alternate Phone Instructions</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AreaofResponsibility__c</fullName>
        <inlineHelpText>What area is the adjuster responsible for?  Specifically if the area of responsibility is outsite his/her physical location.</inlineHelpText>
        <label>Area of Responsibility</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant__c</fullName>
        <label>Assistant</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Communication_Preferences__c</fullName>
        <label>Billing Communication Preferences</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Preference_Notes__c</fullName>
        <label>Communication Preference Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Preferences__c</fullName>
        <label>Communication Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Primary Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Current_Temp_Housing_Provider__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ALE</fullName>
                </value>
                <value>
                    <fullName>DMA</fullName>
                </value>
                <value>
                    <fullName>Klein &amp; Co</fullName>
                </value>
                <value>
                    <fullName>Execustay</fullName>
                </value>
                <value>
                    <fullName>Oakwood</fullName>
                </value>
                <value>
                    <fullName>Assured</fullName>
                </value>
                <value>
                    <fullName>Temp Accom</fullName>
                </value>
                <value>
                    <fullName>Housing HQ</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Temp_Housing_Provider__c</fullName>
        <label>Current Temp Housing Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self/Policy Holder</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Conversion__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Description__c</fullName>
        <label>Lead Source Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ACE Claims</fullName>
                </value>
                <value>
                    <fullName>AICA Education</fullName>
                </value>
                <value>
                    <fullName>All-Industry Day</fullName>
                </value>
                <value>
                    <fullName>Association Meeting</fullName>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>CCNC</fullName>
                </value>
                <value>
                    <fullName>FAPIA</fullName>
                </value>
                <value>
                    <fullName>Golf Event</fullName>
                </value>
                <value>
                    <fullName>Kentucky Claims</fullName>
                </value>
                <value>
                    <fullName>NAIIA</fullName>
                </value>
                <value>
                    <fullName>NAPIA</fullName>
                </value>
                <value>
                    <fullName>NLA Trade Fair</fullName>
                </value>
                <value>
                    <fullName>OCAA Symposium</fullName>
                </value>
                <value>
                    <fullName>PLRB Claims</fullName>
                </value>
                <value>
                    <fullName>PLRB Regional</fullName>
                </value>
                <value>
                    <fullName>Social Event</fullName>
                </value>
                <value>
                    <fullName>Unit Meeting</fullName>
                </value>
                <value>
                    <fullName>Windstorm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_City__c</fullName>
        <label>Other City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Country__c</fullName>
        <label>Other Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Source__c</fullName>
        <label>Other Source</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_State_Province__c</fullName>
        <label>Other State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Street__c</fullName>
        <label>Other Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Zip_Postal_Code__c</fullName>
        <label>Other Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Phone_Instructions__c</fullName>
        <label>Primary Phone Instructions</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refered_By__c</fullName>
        <label>Refered By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <label>Reports To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone_Instructions__c</fullName>
        <label>Secondary Phone Instructions</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Type_of_Claim_Handled__c</fullName>
        <label>Type of Claim Handled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Homeowner</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Multi Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume_of_Claims__c</fullName>
        <inlineHelpText>Volume of Claims per Month for this Individual</inlineHelpText>
        <label>Volume of Claims</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-2</fullName>
                </value>
                <value>
                    <fullName>3-5</fullName>
                </value>
                <value>
                    <fullName>6-10</fullName>
                </value>
                <value>
                    <fullName>11+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Contact_Id__c</fullName>
        <description>The iContact Contact Id associated with this lead.</description>
        <label>iContact Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myfaxv3__DeliveryType__c</fullName>
        <inlineHelpText>When using the Mass Fax &amp; Email functionality from MyFax, this field represents the lead&apos;s preferred method of communication, which can be either or both of Fax and Email.</inlineHelpText>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fax</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax &amp; Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Domain__c</fullName>
        <label>Domain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Email_Status__c</fullName>
        <formula>IF(tdc_tvte__Success__c == true,
CASE(tdc_tvte__Result__c, &apos;deliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/Deliverable.png&apos;, &apos;Deliverable&apos;),
&apos;undeliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/Undeliverable.png&apos;, &apos;Not Deliverable&apos;), 
&apos;risky&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/Risky.png&apos;, &apos;risky&apos;), 
&apos;unknown&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/Unknown.png&apos;, &apos;Unknown&apos;), tdc_tvte__Result__c) + &apos; &apos; + BR() + tdc_tvte__did_you_mean__c
, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/Notverified.png&apos;, &apos;Not Verified Yet&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Empty__c</fullName>
        <formula>IF(tdc_tvte__Success__c == true, 

CASE(tdc_tvte__Result__c, &apos;deliverable&apos;, &apos;Verified&apos;, 

&apos;undeliverable&apos;, &apos;Verified&apos;, 

&apos;risky&apos;, &apos;Verified&apos;, 

&apos;unknown&apos;, &apos;Verified&apos;, tdc_tvte__Result__c) 

, &apos;Not Verified&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Legend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tdc_tvte__Reason__c</fullName>
        <label>Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Result__c</fullName>
        <label>Result</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Result_text__c</fullName>
        <formula>IF(tdc_tvte__Success__c == true,  

CASE(tdc_tvte__Result__c, &apos;deliverable&apos;,  &apos;Deliverable&apos;, 

&apos;undeliverable&apos;,  &apos;Non-Deliverable&apos;, 

&apos;risky&apos;,  &apos;Risky&apos;, 

&apos;unknown&apos;, &apos;Unknown&apos;, tdc_tvte__Result__c) 

, &apos;Not Verified Yet&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Legend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Sendex__c</fullName>
        <label>Sendex</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Status_of_verification__c</fullName>
        <formula>IF(tdc_tvte__Success__c == true, 
CASE(tdc_tvte__Result__c, &apos;deliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__Verified/Deliverable.png&apos;, &apos;Deliverable&apos;), 
&apos;undeliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__Verified/Undeliverable.png&apos;, &apos;Not Deliverable&apos;), 
&apos;risky&apos;, IMAGE(&apos;/resource/tdc_tvte__Verified/Risky.png&apos;, &apos;risky&apos;), 
&apos;unknown&apos;, IMAGE(&apos;/resource/tdc_tvte__Verified/Unknown.png&apos;, &apos;Unknown&apos;), tdc_tvte__Result__c) 
, IMAGE(&apos;/resource/tdc_tvte__Verified/Notverified.png&apos;, &apos;Not Verified Yet&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Of Email Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__accept_all__c</fullName>
        <defaultValue>false</defaultValue>
        <label>accept all</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__did_you_mean__c</fullName>
        <label>Did you mean</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__disposable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>disposable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__free__c</fullName>
        <defaultValue>false</defaultValue>
        <label>free</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__message__c</fullName>
        <label>message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>role</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>SafecoLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>contains</operation>
            <value>Safeco</value>
        </filters>
        <label>Safeco Leads</label>
    </listViews>
    <listViews>
        <fullName>Safecoleads2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>contains</operation>
            <value>Safeco</value>
        </filters>
        <label>Safeco leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>WA_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CONVERTED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATE</field>
            <operation>equals</operation>
            <value>WA</value>
        </filters>
        <label>WA - Leads</label>
        <sharedTo>
            <group>SalesMarketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>tdc_tvte__Verified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>tdc_tvte__Status_of_verification__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tdc_tvte__Result__c</field>
            <operation>equals</operation>
            <value>deliverable</value>
        </filters>
        <label>Verified Leads</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Do_Not_Create_New_Claim</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL(Status, &apos;Qualified&apos;), ConvertedOpportunityId != NULL)</errorConditionFormula>
        <errorMessage>Do not create a new claim upon conversion must be checked to convert this lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Country</fullName>
        <active>true</active>
        <description>Mailing Country must be 3 letters or more</description>
        <errorConditionFormula>AND(LEN(Country) &lt;&gt; 0,LEN(Country) &lt; 3)</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>Mailing Country must be 3 letters or more</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_PostalCode_Canada</fullName>
        <active>true</active>
        <description>Makes sure the postal code is in the correct format</description>
        <errorConditionFormula>AND(
LOWER( Country ) = &quot;canada&quot;,NOT(LEN( PostalCode )=0),
NOT(REGEX( PostalCode ,
&quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;)))</errorConditionFormula>
        <errorDisplayField>PostalCode</errorDisplayField>
        <errorMessage>Mailing Zip/Postal Code must be in A9A 9A9 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Province_Country</fullName>
        <active>true</active>
        <description>Makes sure mailing province is valid for the mailing billing country</description>
        <errorConditionFormula>AND(LEN(  State  ) = 2,CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp;
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp;
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp;
&quot;WA:WV:WI:WY:VI:GU;PR&quot;, State ),LOWER(  Country  ) = &quot;canada&quot;)</errorConditionFormula>
        <errorDisplayField>State</errorDisplayField>
        <errorMessage>The current Mailing Province is invalid for the current Mailing Country. Valid provinces are ON, QC, NS, NB, MB, PE, NL, AB, BC, SK</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_State</fullName>
        <active>true</active>
        <description>A valid two-letter Mailing State/Province is required</description>
        <errorConditionFormula>OR(AND(NOT(LEN(  State  )=0),CONTAINS(&quot;usa:canada&quot;, LOWER(Country)), 
NOT(CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp;
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp;
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp;
&quot;WA:WV:WI:WY:VI:GU:PR:ON:QC:NS:NB:MB:PE:NL:AB:BC:SK&quot;,  State ))),
LEN( State ) = 1)</errorConditionFormula>
        <errorDisplayField>State</errorDisplayField>
        <errorMessage>The current Mailing State/Province is invalid. State and Province codes are two letter capitalized abbreviations. Valid provinces are ON, QC, NS, NB, MB, PE, NL, AB, BC, SK</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_State_Country</fullName>
        <active>true</active>
        <description>Makes sure mailing state is valid for the mailing billing country</description>
        <errorConditionFormula>AND(LEN(  State  ) = 2,CONTAINS(&quot;ON:QC:NS:NB:MB:PE:NL:AB:BC:SK&quot;, State ),LOWER(  Country  ) = &quot;usa&quot;)</errorConditionFormula>
        <errorDisplayField>State</errorDisplayField>
        <errorMessage>The current Mailing State is invalid for the current Mailing Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_State_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(LEN(State) = 2,CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp;
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp;
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp;
&quot;WA:WV:WI:WY:VI:GU;PR&quot;,State),Country = &quot;Canada&quot;),
AND(LEN(State) = 2,CONTAINS(&quot;ON:QC:NS:NB:MB:PE:NL:AB:BC:SK&quot;,State),Country = &quot;USA&quot;))</errorConditionFormula>
        <errorDisplayField>State</errorDisplayField>
        <errorMessage>Must contain the standard 2 character capitalized state code</errorMessage>
    </validationRules>
</CustomObject>